--- a/cats/presentation/src/main/resources/static/index.html
+++ b/cats/presentation/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>LJGS Cats - Учет котиков и их владельцев</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
