feat: add business logic + presentation

--- a/cats/presentation/src/main/resources/static/index.html
+++ b/cats/presentation/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>LJGS Cats - Учет котиков и их владельцев</title>
-	<link href="css/style.css" rel="stylesheet">
+	<link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -35,6 +35,6 @@
 <footer>
 	<p>© 2023 LJGS Cats. All Rights Reserved.</p>
 </footer>
-<script src="js/script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
